dom/media/MediaFormatReader.cpp:14:10: fatal error: 'AOMDecoder.h: No such file or directory' , when compiling with --disable-av1
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | --- | unaffected |
| firefox95 | --- | fixed |
People
(Reporter: herrtimson, Assigned: alwu)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
I checked out latest copy of firefox-nightly source code and compiled it.
Actual results:
the build is broken with a missing header:
8:30.23 In file included from Unified_cpp_dom_media2.cpp:74:
8:30.23 /usr/aarch64-unknown-linux-gnu/tmp/portage/www-client/firefox-95.0/work/firefox-95.0/dom/media/MediaFormatReader.cpp:14:10: fatal error: AOMDecoder.h: No such file or directory
8:30.23 14 | #include "AOMDecoder.h"
8:30.23 | ^~~~~~~~~~~~~~
8:30.23 compilation terminated.
8:30.23 In file included from /usr/aarch64-unknown-linux-gnu/tmp/portage/www-client/firefox-95.0/work/firefox_build/dist/include/nsTArray.h:3331,
Expected results:
I expect the build to pass.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•