Bug 1734327 - only use AOMDecoder when MOZ_AV1 is defined. r=bryce

Differential Revision: https://phabricator.services.mozilla.com/D127692